// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `null`;

exports[`Button has a valid snapshot 1`] = `
<button
  className=""
  type="button"
>
  Give Me More
</button>
`;

exports[`Search has a valid snapshot 1`] = `
<form>
  <input
    type="text"
  />
  <button
    className=""
    type="button"
  >
    Search
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        Title
      </th>
      <th>
        Author
      </th>
      <th>
        Number of comments
      </th>
      <th>
        Points
      </th>
      <th>
        Remove
      </th>
    </tr>
  </thead>
  <tbody />
</table>
`;
